--- a/foodTwitter/templates/all_recipes.html
+++ b/foodTwitter/templates/all_recipes.html
@@ -6,12 +6,17 @@
 {% endblock %}
 
 {% block body %}
-  <ul>
-    {% for recipe in recipes %}
+  <div class="navigation">
+    <a href="{{ url_for('index') }}">Home</a>
+  </div>
+  <ul class="recipe-list">  {% for recipe in recipes %}
       <li>
-        <h3>{{ recipe['recipe_name'] }}</h3>
-        <p>{{ recipe['cooking_time'] }} minutes</p>
-        </li>
+        <h3>{{ recipe['recipe_name'] }}</h3>  <p>Ingredients:</p>
+        <ul class="recipe-ingredients">  {% for ingredient in recipe['ingredients'].split(",") %}
+            <li>{{ ingredient.strip() }}</li>
+          {% endfor %}
+        </ul>
+      </li>
     {% endfor %}
   </ul>
 {% endblock %}
