--- a/foodTwitter/templates/base.html
+++ b/foodTwitter/templates/base.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         {% block navbar %}
-          <li><a href="#">Home</a></li>  <li><a href="{{ url_for('get_recipes') }}">All Recipes</a></li>
+          <li><a href="{{ url_for('get_recipes') }}">All Recipes</a></li>
         {% endblock %}
     </header>
 
