--- a/foodTwitter/templates/index.html
+++ b/foodTwitter/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <h1> Best Recipes Home Page </h1>
+    <title>Best Recipes - Home</title>  <h1>Welcome to Best Recipes!</h1>
 {% endblock %}
 
 {% block body %}
