--- a/foodTwitter/templates/all_recipes.html
+++ b/foodTwitter/templates/all_recipes.html
@@ -6,17 +6,19 @@
 {% endblock %}
 
 {% block body %}
-  <div class="navigation">
-    <a href="{{ url_for('index') }}">Home</a>
-  </div>
-  <ul class="recipe-list">  {% for recipe in recipes %}
-      <li>
-        <h3>{{ recipe['recipe_name'] }}</h3>  <p>Ingredients:</p>
-        <ul class="recipe-ingredients">  {% for ingredient in recipe['ingredients'].split(",") %}
-            <li>{{ ingredient.strip() }}</li>
-          {% endfor %}
-        </ul>
-      </li>
-    {% endfor %}
-  </ul>
+<ul class="recipe-list">
+  {% for recipe in recipes %}
+    <li>
+      <h3>{{ recipe['recipe_name'] }}</h3>
+      <p>Ingredients:</p>
+      <ul class="recipe-ingredients">
+        {% for ingredient in recipe['ingredients'].split(",") %}
+          <li>{{ ingredient.strip() }}</li>
+        {% endfor %}
+      </ul>
+      <p>Instructions:</p>
+      <p>{{ recipe['instructions'] }}</p>  </li>
+  {% endfor %}
+</ul>
+
 {% endblock %}
