--- a/foodTwitter/templates/all_recipes.html
+++ b/foodTwitter/templates/all_recipes.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-  <h1>All Recipes</h1>
+    <title>Best Recipes - Explore</title>  <h1>Explore the best authentic recipes!</h1>
 {% endblock %}
 
 {% block body %}
