--- a/foodTwitter/templates/all_recipes.html
+++ b/foodTwitter/templates/all_recipes.html
@@ -2,7 +2,8 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Best Recipes - Explore</title>  <h1>Explore the best authentic recipes!</h1>
+    <title>Best Recipes - Explore</title>
+    <h1>Explore the best authentic recipes!</h1>
 {% endblock %}
 
 {% block body %}
@@ -17,7 +18,13 @@
         {% endfor %}
       </ul>
       <p>Instructions:</p>
-      <p>{{ recipe['instructions'] }}</p>  </li>
+      <p>{{ recipe['instructions'] }}</p>
+
+      <a href="{{ url_for('update_recipe', recipe_id=recipe['recipe_id']) }}">Update Recipe</a>
+      <form action="{{ url_for('delete_recipe', recipe_id=recipe['recipe_id']) }}" method="POST" style="display: inline-block;">
+        <button type="submit" onclick="return confirm('Are you sure you want to delete this recipe?')">Delete</button>
+      </form>
+    </li>
   {% endfor %}
 </ul>
 
