--- a/foodTwitter/templates/all_recipes.html
+++ b/foodTwitter/templates/all_recipes.html
@@ -11,19 +11,23 @@
   {% for recipe in recipes %}
     <li>
       <h3>{{ recipe['recipe_name'] }}</h3>
-      <p>Ingredients:</p>
-      <ul class="recipe-ingredients">
-        {% for ingredient in recipe['ingredients'].split(",") %}
-          <li>{{ ingredient.strip() }}</li>
-        {% endfor %}
-      </ul>
-      <p>Instructions:</p>
-      <p>{{ recipe['instructions'] }}</p>
-
-      <a href="{{ url_for('update_recipe', recipe_id=recipe['recipe_id']) }}">Update Recipe</a>
-      <form action="{{ url_for('delete_recipe', recipe_id=recipe['recipe_id']) }}" method="POST" style="display: inline-block;">
-        <button type="submit" onclick="return confirm('Are you sure you want to delete this recipe?')">Delete</button>
-      </form>
+      <div class="recipe-details">
+        <p>Cooking Time: {{ recipe['cooking_time'] }} minutes (optional)</p>
+        <p>Ingredients:</p>
+        <ul class="recipe-ingredients">
+          {% for ingredient in recipe['ingredients'].split(",") %}
+            <li>{{ ingredient.strip() }}</li>
+          {% endfor %}
+        </ul>
+        <p>Instructions:</p>
+        <p>{{ recipe['instructions'] }}</p>
+      </div>
+      <div class="recipe-actions">
+        <a href="{{ url_for('update_recipe', recipe_id=recipe['recipe_id']) }}" class="button update-button">Update Recipe</a>
+        <form action="{{ url_for('delete_recipe', recipe_id=recipe['recipe_id']) }}" method="POST" style="display: inline-block;">
+          <button type="submit" class="button delete-button" onclick="return confirm('Are you sure you want to delete this recipe?')">Delete</button>
+        </form>
+      </div>
     </li>
   {% endfor %}
 </ul>
