--- a/foodTwitter/templates/update_recipe.html
+++ b/foodTwitter/templates/update_recipe.html
@@ -7,28 +7,30 @@
 {% endblock %}
 
 {% block body %}
-{% if recipe %}  <form method="POST">
-  <h2>{{ recipe['recipe_name'] }}</h2>
-  <div class="form-group">
-    <label for="recipe_name">Recipe Name:</label>
-    <input type="text" name="recipe_name" id="recipe_name" value="{{ recipe['recipe_name'] }}">
-  </div>
-  <div class="form-group">
-    <label for="ingredients">Ingredients (comma separated):</label>
-    <textarea name="ingredients" id="ingredients">{{ recipe['ingredients'] }}</textarea>
-  </div>
-  <div class="form-group">
-    <label for="instructions">Instructions:</label>
-    <textarea name="instructions" id="instructions">{{ recipe['instructions'] }}</textarea>
-  </div>
-  <div class="form-group">
-    <label for="cooking_time">Cooking Time (minutes):</label>
-    <input type="number" name="cooking_time" id="cooking_time" value="{{ recipe['cooking_time'] }}">
-  </div>
-  <button type="submit">Update Recipe</button>
-</form>
-{% else %}
+<div class="content">
+  {% if recipe %}
+  <form method="POST" class="update-recipe-form">
+    <h2>{{ recipe['recipe_name'] }}</h2>
+    <div class="form-group">
+      <label for="recipe_name">Recipe Name:</label>
+      <input type="text" name="recipe_name" id="recipe_name" value="{{ recipe['recipe_name'] }}" class="input-field">
+    </div>
+    <div class="form-group">
+      <label for="ingredients">Ingredients (comma separated):</label>
+      <textarea name="ingredients" id="ingredients" class="input-field">{{ recipe['ingredients'] }}</textarea>
+    </div>
+    <div class="form-group">
+      <label for="instructions">Instructions:</label>
+      <textarea name="instructions" id="instructions" class="input-field">{{ recipe['instructions'] }}</textarea>
+    </div>
+    <div class="form-group">
+      <label for="cooking_time">Cooking Time (minutes):</label>
+      <input type="number" name="cooking_time" id="cooking_time" value="{{ recipe['cooking_time'] }}" class="input-field">
+    </div>
+    <button type="submit" class="button update-button">Update Recipe</button>
+  </form>
+  {% else %}
   <p>Recipe not found!</p>
-{% endif %}
-
+  {% endif %}
+</div>
 {% endblock %}
