--- a/foodTwitter/static/css/main.css
+++ b/foodTwitter/static/css/main.css
@@ -164,3 +164,28 @@ nav li a:hover {
 .update-recipe-form button[type="submit"]:hover {
   background-color: #555;
 }
+
+header {
+    position: relative;
+}
+
+#avatar-container {
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    text-align: center;
+}
+
+#avatar {
+    width: 190px;
+    height: 60px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.avatar-text {
+    font-size: 16px;
+    margin: 0;
+    font-family: sans-serif;
+    font-weight: bold;
+}
